--- a/index.html
+++ b/index.html
@@ -23,10 +23,10 @@
                 <a class="navbar-brand js-scroll-trigger" href="#page-top">Programacion</a><button class="navbar-toggler navbar-toggler-right" type="button" data-toggle="collapse" data-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation"><span class="navbar-toggler-icon"></span></button>
                 <div class="collapse navbar-collapse" id="navbarResponsive">
                     <ul class="navbar-nav ml-auto my-2 my-lg-0">
-                        <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#Logica">About</a></li>
-                        <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#Lenguajes">Services</a></li>
-                        <li class="nav-item"><a class="nav-link js-scroll-trigger" href="HTML">Portfolio</a></li>
-                        <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#Programas">Contact</a></li>
+                        <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#Logica">Logica</a></li>
+                        <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#Lenguajes">Lenguajes</a></li>
+                        <li class="nav-item"><a class="nav-link js-scroll-trigger" href="HTML">Portfolio</a>HTML</li>
+                        <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#Programas">Programas</a></li>
                     </ul>
                 </div>
             </div>
