--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
                     </div>
                     <div class="col-lg-8 align-self-baseline">
                         <p class="text-white-75 font-weight-light mb-5">La Programacion puede llegar a ser confusa, en algunos momentos puedes hasta desesperarte por que algo no compila pero cuando logras entender este comlejo mundo, es magico¡</p>
-                        <a class="btn btn-primary btn-xl js-scroll-trigger" href="#about">Find Out More</a>
+                        <a class="btn btn-primary btn-xl js-scroll-trigger" href="#about">La era de la programacion es ahora</a>
                     </div>
                 </div>
             </div>
@@ -51,9 +51,9 @@
             <div class="container">
                 <div class="row justify-content-center">
                     <div class="col-lg-8 text-center">
-                        <h2 class="text-white mt-0">We've got what you need!</h2>
+                        <h2 class="text-white mt-0">Lenguajes de Programacion </h2>
                         <hr class="divider light my-4" />
-                        <p class="text-white-50 mb-4">Start Bootstrap has everything you need to get your new website up and running in no time! Choose one of our open source, free to download, and easy to use themes! No strings attached!</p>
+                        <p class="text-white-50 mb-4">Existen muchisimos lenguajes de programacion, algunos son de lenguaje mas pesado que otros, esto quiere decir que son mas complejos: algunos ejemplos son C++, C#, Java, Phyton entre otros.</p>
                         <a class="btn btn-light btn-xl js-scroll-trigger" href="#services">Get Started!</a>
                     </div>
                 </div>
