--- a/index.html
+++ b/index.html
@@ -53,8 +53,8 @@
                     <div class="col-lg-8 text-center">
                         <h2 class="text-white mt-0">Lenguajes de Programacion </h2>
                         <hr class="divider light my-4" />
-                        <p class="text-white-50 mb-4">Existen muchisimos lenguajes de programacion, algunos son de lenguaje mas pesado que otros, esto quiere decir que son mas complejos: algunos ejemplos son C++, C#, Java, Phyton entre otros.</p>
-                        <a class="btn btn-light btn-xl js-scroll-trigger" href="#services">Get Started!</a>
+                        <p class="text-white-50 mb-4">Existen muchisimos lenguajes de programacion, algunos son de lenguaje mas pesado que otros, esto quiere decir que son mas complejos: algunos ejemplos son C++, C#, Java, Phyton entre otros. Muchos de estos lenguajes de programacion son usados como base para crear aplicaciones, ya algunos de ellos tambien son base de aplicaciones famosas como Facebook. </p>
+                        <a class="btn btn-light btn-xl js-scroll-trigger" href="#services">Que esperas para aprender a programar?</a>
                     </div>
                 </div>
             </div>
@@ -62,35 +62,35 @@
         <!-- Services section-->
         <section class="page-section" id="services">
             <div class="container">
-                <h2 class="text-center mt-0">At Your Service</h2>
+                <h2 class="text-center mt-0">Habilidades y beneficios que desarrolla la programacion</h2>
                 <hr class="divider my-4" />
                 <div class="row">
                     <div class="col-lg-3 col-md-6 text-center">
                         <div class="mt-5">
                             <i class="fas fa-4x fa-gem text-primary mb-4"></i>
-                            <h3 class="h4 mb-2">Sturdy Themes</h3>
-                            <p class="text-muted mb-0">Our themes are updated regularly to keep them bug free!</p>
+                            <h3 class="h4 mb-2">Requerimiento alto en las empresas</h3>
+                            <p class="text-muted mb-0">Esta profesion es demandada en las empresas y habitualmente disponen de un buen ingreso salarial.</p>
                         </div>
                     </div>
                     <div class="col-lg-3 col-md-6 text-center">
                         <div class="mt-5">
                             <i class="fas fa-4x fa-laptop-code text-primary mb-4"></i>
-                            <h3 class="h4 mb-2">Up to Date</h3>
-                            <p class="text-muted mb-0">All dependencies are kept current to keep things fresh.</p>
+                            <h3 class="h4 mb-2">Trabaja desde tu casa</h3>
+                            <p class="text-muted mb-0">La creacion de paginas web para los negocios propios y/o de una empresa son muy demandadas en empresas o incluso si quieres iniciar tu propio negocio..</p>
                         </div>
                     </div>
                     <div class="col-lg-3 col-md-6 text-center">
                         <div class="mt-5">
                             <i class="fas fa-4x fa-globe text-primary mb-4"></i>
-                            <h3 class="h4 mb-2">Ready to Publish</h3>
-                            <p class="text-muted mb-0">You can use this design as is, or you can make changes!</p>
+                            <h3 class="h4 mb-2">Lenguajes Universales</h3>
+                            <p class="text-muted mb-0">Los lenguajes de programacion son los unicos que no cambian en el mundo, de tal manera que en cualquier pais puedes obtener un trabajo como programador :)</p>
                         </div>
                     </div>
                     <div class="col-lg-3 col-md-6 text-center">
                         <div class="mt-5">
                             <i class="fas fa-4x fa-heart text-primary mb-4"></i>
-                            <h3 class="h4 mb-2">Made with Love</h3>
-                            <p class="text-muted mb-0">Is it really open source if it's not made with love?</p>
+                            <h3 class="h4 mb-2">Amor a la programacion </h3>
+                            <p class="text-muted mb-0">Cuando llevas trabajando muchos años en esta profesion, llegas a desarrollar amor y pasion por lo que haces dia a dia    </p>
                         </div>
                     </div>
                 </div>
@@ -160,8 +160,8 @@
         <!-- Call to action section-->
         <section class="page-section bg-dark text-white">
             <div class="container text-center">
-                <h2 class="mb-4">Free Download at Start Bootstrap!</h2>
-                <a class="btn btn-light btn-xl" href="https://startbootstrap.com/themes/creative/">Download Now!</a>
+                <h2 class="mb-4">Ahora que sabes un poco de esta profesion a que esperas!</h2>
+                <a class="btn btn-light btn-xl" href="https://startbootstrap.com/themes/creative/">Ve a programar ahora!</a>
             </div>
         </section>
         <!-- Contact section-->
@@ -169,26 +169,26 @@
             <div class="container">
                 <div class="row justify-content-center">
                     <div class="col-lg-8 text-center">
-                        <h2 class="mt-0">Let's Get In Touch!</h2>
+                        <h2 class="mt-0">Investiga tu lenguaje preferido y manos a la obra!</h2>
                         <hr class="divider my-4" />
-                        <p class="text-muted mb-5">Ready to start your next project with us? Give us a call or send us an email and we will get back to you as soon as possible!</p>
+                        <p class="text-muted mb-5">Puedes investigar en diferentes sitios por la web las caracteristicas de cada uno de los muchos lenguajes de programacion, en base a eso puedes elegir tu favorito o el que se te haga menos complejo y listo ¡a programar!</p>
                     </div>
                 </div>
                 <div class="row">
                     <div class="col-lg-4 ml-auto text-center mb-5 mb-lg-0">
                         <i class="fas fa-phone fa-3x mb-3 text-muted"></i>
-                        <div>+1 (555) 123-4567</div>
+                        <div>+502 3403 6183</div>
                     </div>
                     <div class="col-lg-4 mr-auto text-center">
                         <i class="fas fa-envelope fa-3x mb-3 text-muted"></i
-                        ><!-- Make sure to change the email address in BOTH the anchor text and the link target below!--><a class="d-block" href="mailto:contact@yourwebsite.com">contact@yourwebsite.com</a>
+                        ><!-- Make sure to change the email address in BOTH the anchor text and the link target below!--><a class="d-block" href="mailto:201800094@colsanjose.edu.gt">201800094@colsanjose.edu.gt</a>
                     </div>
                 </div>
             </div>
         </section>
         <!-- Footer-->
         <footer class="bg-light py-5">
-            <div class="container"><div class="small text-center text-muted">Copyright © 2020 - Start Bootstrap</div></div>
+            <div class="container"><div class="small text-center text-muted">Copyright © 2020 - Programacion</div></div>
         </footer>
         <!-- Bootstrap core JS-->
         <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
