--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
                     </div>
                     <div class="col-lg-8 align-self-baseline">
                         <p class="text-white-75 font-weight-light mb-5">La Programacion puede llegar a ser confusa, en algunos momentos puedes hasta desesperarte por que algo no compila pero cuando logras entender este comlejo mundo, es magico¡</p>
-                        <a class="btn btn-primary btn-xl js-scroll-trigger" href="#about">La era de la programacion es ahora</a>
+                        <a class="btn btn-primary btn-xl js-scroll-trigger" href="#about">La era de la programacion es ahora.</a>
                     </div>
                 </div>
             </div>
